# vijay-echo-codec

./: .env.example  .gitignore  .hackathon.json  CLAUDE.md  README.md  db.py  main.py  prompts.py  render.yaml  requirements.txt
v1/: README.md  (+3 more)
v3/: BUILDING_YOUR_FIRST_AGENT.md  LICENSE  LINEAR_TRACKER.md  MIGRATION.md  README.md  pyproject.toml  scorecard.json  scorecard.md  scorecard_baseline.json  scorecard_baseline.md  scorecard_baseline_tiers.json  scorecard_v2.json  scorecard_v2.md  scorecard_v3.json  scorecard_v3.md  scorecard_v4.json  scorecard_v4.md
v3/datasets/: LABELING.md  eval_v1.jsonl  eval_v2.jsonl  policies_v1.txt  policies_v2.txt
v3/examples/livekit_quickstart/: README.md  agent.py
v3/examples/quickstart/: policies.txt  sample_transcript.json
v3/plivo_mirror/: __init__.py  config.py  context.py  eval.py  fix.py  supervisor.py  text.py
v3/plivo_mirror/adapters/: __init__.py
v3/plivo_mirror/adapters/livekit/: __init__.py  supervised_agent.py
v3/plivo_mirror/agents/: openai_loop.py
v3/plivo_mirror/fixers/: base.py
v3/plivo_mirror/intervention/: generator.py  orchestrator.py
v3/plivo_mirror/llm/: openai.py
v3/plivo_mirror/plivo/: raw_ws.py  stream_sdk.py
v3/plivo_mirror/policy/: compiler.py
v3/plivo_mirror/reports/: __init__.py  schema.py
v3/plivo_mirror/reports/sinks/: base.py
v3/plivo_mirror/scorer/: llm.py  mirror_judge.py  pregate.py  streaming.py  tool_gate.py
v3/plivo_mirror/scorer/tier0/: __init__.py  arithmetic.py  base.py  consistency.py  contradiction.py  policy_tripwires.py  tool_arg_check.py
v3/plivo_mirror/scorer/tier1/: __init__.py  base.py  huggingface.py
v3/plivo_mirror/scorer/tier2/: __init__.py  _judge_prompt.py  atla.py  azure_openai.py  base.py  huggingface_llm.py  openai_compatible.py
v3/plivo_mirror/state/: base.py  memory.py
v3/plivo_mirror/voice/tts/: ws_inject.py
v3/tests/unit/: conftest.py  test_intent_note.py  test_mirror_judge.py  test_no_side_effects.py  test_pregate.py  test_reports.py  test_supervisor_from_env.py  test_text_filters.py  test_tier0_arithmetic.py  test_tier0_consistency.py  test_tier0_tool_arg.py  test_tier0_tripwires.py  test_tier1_huggingface.py  test_tier2_atla.py
v3/voice_agents/pizza_plivo/: main.py  requirements.txt
v4/: README.md  demo_live.py  design_speech_gating_and_nli.md  firewall_explorer.html  pyproject.toml  scorecard_eval_v2_det.json  scorecard_eval_v2_live.json  scorecard_eval_v2_nli.json  scorecard_live.json  scorecard_live_baseline.json  v4_flow.excalidraw  v4_flow.md  v4_overview.excalidraw  v4_overview.html  v4_problems.excalidraw  v4_sequence.html
v4/datasets/: LABELING.md  facts_v1.json  golden_v1.jsonl
v4/examples/flight_agent/: README.md  agent.py
v4/examples/flight_agent_mirror/: README.md  agent.py
v4/examples/livekit_quickstart/: README.md  agent.py
v4/plivo_mirror/: __init__.py  contracts.py  eval.py  firewall.py
v4/plivo_mirror/adapters/: __init__.py
v4/plivo_mirror/adapters/livekit/: __init__.py  supervised_agent.py
v4/plivo_mirror/authz/: __init__.py  service.py
v4/plivo_mirror/guards/: __init__.py  action.py  deterministic.py  risk_spans.py  semantic.py  signal.py  speech.py
v4/plivo_mirror/intervention/: __init__.py  correction.py  engine.py  packet.py  regenerate.py
v4/plivo_mirror/policy/: __init__.py  compiler.py
v4/plivo_mirror/runtime/: __init__.py  escalation.py  grounding.py  intent_memory.py  loop.py  persona_guard.py
v4/plivo_mirror/state/: __init__.py  entities.py  extract.py  session.py
v4/plivo_mirror/verifier/: __init__.py  base.py  llm_judge.py
v4/tests/unit/: test_action_guard.py  test_authz.py  test_contracts.py  test_entities.py  test_eval_harness.py  test_extract.py  test_firewall.py  test_livekit_adapter.py  test_phase_a_fixes.py  test_policy_compiler.py  test_regeneration.py  test_risk_spans.py  test_router_honesty.py  test_runtime.py  test_semantic.py  test_session_state.py  test_signal.py  test_single_llm.py  test_speech_guard.py  test_verifier_llm_judge.py
v5/: .gitignore  DOCUMENTATION.md  PRODUCTION.md  QUICKSTART.md  README.md  pyproject.toml
v5/docs/: CONFLUENCE_PAGE.md  CONNECT_CLOUD.md  HANDOFF.md  ROADMAP.md  architecture-onepage.html  architecture-overview.html  architecture.excalidraw  architecture.html
v5/eval/: run_eval.py  run_v4_set.py  scorecard_v4set.json
v5/eval/fixtures/: call_induced_failures.json  call_organic.json  kb_aurora.json  reference_aurora.json
v5/examples/: run_demo.py
v5/examples/aurora_agent/: agent.py
v5/examples/northwind_bank_agent/: agent.py  config.py
v5/examples/skyline_flight_agent/: Dockerfile  agent.py  flight_store.py
v5/examples/wellspring_clinic_agent/: agent.py  config.py
v5/plivo_mirror_v5/: __init__.py  llm_client.py
v5/plivo_mirror_v5/auditor/: __init__.py  post_call_judge.py  run_audit.py
v5/plivo_mirror_v5/deployables/intervention/: __init__.py  hook_a_next_turn.py  hook_b_pre_tts.py
v5/plivo_mirror_v5/deployables/monitoring/: analyze_recording.py  export_dataset.py  replay_fixture.py  seed_fleet.py  simulate_live_call.py
v5/plivo_mirror_v5/engine/: __init__.py  arbitration.py  claims.py  config.py  engine.py  gate.py  kb_retriever.py  policy.py  reference.py  session_state.py  tool_gate.py  verdict.py
v5/plivo_mirror_v5/engine/layers/: __init__.py  base.py  l1_input_integrity.py  l2_checks.py  (+2 more)
v5/plivo_mirror_v5/integrations/: __init__.py  audio_levels.py  livekit_adapter.py  livekit_observer.py  pre_tts.py  recording.py
v5/plivo_mirror_v5/telemetry/: __init__.py  emitter.py  schema.py
v5/tests/: conftest.py  helpers.py  test_arbitration.py  test_claims.py  test_emitter.py  test_engine.py  test_hook_b_inline_judge.py  test_intervention.py  test_l1_input_integrity.py  test_l2_deterministic.py  test_l2_policy_checks.py  test_l3_grounding_nli.py  test_livekit_adapter.py  test_monitoring_backend.py  test_new_features.py  test_observer.py  test_post_call_analysis.py  test_pre_tts_runner.py  test_recording.py  test_reference.py  test_session_state.py  test_tool_autowrap.py  test_tool_gate.py  test_two_stage_judge.py
(+126 files in other folders)
