[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plivo-mirror"
version = "0.3.0"
description = "Self-correcting voice agent supervisor — three-tier Mirror Judge (deterministic + classifier + LLM) catches mistakes mid-call and ships PRs to fix them."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Plivo Mirror", email = "noreply@plivo.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3",
    "anyio>=4.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
anthropic = ["anthropic>=0.39"]
# Note: `plivo-stream` is documented in Plivo's docs but not yet
# published to PyPI. When it lands, add it back here. Until then,
# users install the official `plivo` REST SDK and pull plivo-stream
# from GitHub if they want the bidirectional handler.
plivo = ["plivo>=4.50"]
livekit = ["livekit-agents>=1.5,<2"]
all = ["openai>=1.50", "anthropic>=0.39", "plivo>=4.50", "livekit-agents>=1.5,<2"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "pytest-httpx>=0.30"]

[project.urls]
Homepage = "https://github.com/plivo/plivo-mirror"
Issues = "https://github.com/plivo/plivo-mirror/issues"

[project.scripts]
plivo-mirror-replay = "plivo_mirror.replay:main"
plivo-mirror-fix    = "plivo_mirror.fix:main"

[tool.hatch.build.targets.wheel]
packages = ["plivo_mirror"]

[tool.hatch.build.targets.sdist]
# Source distributions ship the library + README + LICENSE only.
# Examples and tests aren't included in installs but remain in the repo.
include = ["plivo_mirror", "README.md", "LICENSE"]
exclude = [
    "examples/*",
    "tests/*",
    "*.db",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
